macros/tests/ui/unknown_sql_table_struct_key_name.stderr
error: Unknown sql struct attribute `name` Supported struct attributes for Table: table_name,drivers,version,no_version,version_test,unique_id.
 --> tests/ui/unknown_sql_table_struct_key_name.rs:4:7
  |
4 | #[sql(name = "users")]
  |       ^^^^
